chore(core): aggressively prune dead code and assets
- Remove non-runtime planning/session artifacts and unused icon assets
- Remove unused JS/Rust dependencies and regenerate lockfiles
- Contract unused Tauri command/API surface and dead DB helpers
- Tighten Rust module visibility to crate-private and remove unused modules
- Apply clippy-driven no-op refactors to keep code warnings clean

Tests: pnpm test && pnpm build && cargo check && cargo clippy --all-targets -- -W dead_code

--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.6.0",
-    "@tauri-apps/plugin-fs": "^2.4.5",
     "lucide-react": "^0.460.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
-    "react-router": "^7.0.0",
-    "recharts": "^2.15.0",
-    "zod": "^3.24.0"
+    "react-router": "^7.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.0",
