chore(cleanup): add workspace cleanup commands
- add reusable cleanup script for build artifacts and dependency folders
- add npm scripts for standard, deep, and dry-run cleanup modes
- document cleanup workflow in README for consistent maintenance
- preserve app behavior by limiting changes to workspace hygiene tooling

Tests: pnpm clean:dry-run; pnpm clean:deep; pnpm clean

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "clean": "sh ./scripts/clean-workspace.sh",
+    "clean:deep": "sh ./scripts/clean-workspace.sh --with-deps",
+    "clean:dry-run": "sh ./scripts/clean-workspace.sh --dry-run"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
